--- a/3 - Proyecto/Despacho/WebApp/Views/CargaMasiva/Index.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/CargaMasiva/Index.cshtml
@@ -102,7 +102,7 @@
 				</h3>
 			</div>
 			<div class="col-xl-4 order-1 order-xl-2 m--align-right">
-				<a href="/CargaMasiva/Create" class="btn btn-success m-btn m-btn--custom m-btn--icon m-btn--air m-btn--pill">
+				<a href="/CargaMasiva/CargaMasiva" class="btn btn-success m-btn m-btn--custom m-btn--icon m-btn--air m-btn--pill">
 					<span>
 						<i class="flaticon-add"></i>
 						<span>Crear Carga</span>
