Intento ejecutar botón

--- a/3 - Proyecto/Despacho/WebApp/Views/CargaMasiva/Index.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/CargaMasiva/Index.cshtml
@@ -115,7 +115,7 @@
 	</div>
 	<div class="m-portlet__body">
 		<!--begin: Datatable -->
-		<div class="m_datatable" id="lista-cargasmasivas"></div>
+		<div class="m_datatable" id="listacargasmasivas"></div>
 		<!--end: Datatable -->
 	</div>
 </div>
