--- a/3 - Proyecto/Despacho/WebApp/Views/CargaMasiva/Index.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/CargaMasiva/Index.cshtml
@@ -97,20 +97,32 @@
 	<div class="m-portlet__head">
 		<div class="m-portlet__head-caption">
 			<div class="m-portlet__head-title">
-				<h3 class="m-portlet__head-text">
-					Listado
-				</h3>
+				
 			</div>
-			<div class="col-xl-4 order-1 order-xl-2 m--align-right">
-				<a href="/CargaMasiva/CargaMasiva" class="btn btn-success m-btn m-btn--custom m-btn--icon m-btn--air m-btn--pill">
-					<span>
-						<i class="flaticon-add"></i>
-						<span>Crear Carga</span>
-					</span>
-				</a>
-				<div class="m-separator m-separator--dashed d-xl-none"></div>
+			<div class="m-portlet__head-tools">
+				<ul class="m-portlet__nav">
+					<li class="m-portlet--mobile">
+						<h4 class="m-portlet__head-text">
+							Listado
+						</h4>
+					</li>
+					<li class="m-portlet--head-overlay">
+						<h1 class="m-portlet__head-text" style="color:white">________________________________________________________</h1>
+					</li>
+					<li class="m-portlet__nav-item">
+						<a href="/CargaMasiva/CargaMasiva" class="btn btn-success m-btn m-btn--custom m-btn--icon m-btn--air m-btn--pill">
+							<span>
+								<i class="flaticon-add"></i>
+								<span>Crear Carga</span>
+							</span>
+						</a>
+					</li>
+				</ul>
 			</div>
 			
+		<div class="m-separator m-separator--dashed d-xl-none"></div>
+	</div>
+		-->
 		</div>
 	</div>
 	<div class="m-portlet__body">
