--- a/3 - Proyecto/Despacho/WebApp/Views/CargaMasiva/Index.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/CargaMasiva/Index.cshtml
@@ -7,7 +7,7 @@
 	List<Datos.Modelo.Usuario> usuarios = Datos.Datos.Usuario.ObtenerUsuariosCargaMasiva();
 
 }
-	@section Less{
+@section Less{
 	<link rel="stylesheet/less" type="text/css" href="~/Content/less/cargaMasiva.less" />
 }
 
@@ -79,37 +79,34 @@
 						</div>
 					</div>
 				</div>
-						<!--
-							<label class="col-form-label col-lg-3 col-sm-12">Fecha desde</label>
-							<input class="form-control col-lg-3 col-sm-12" id="filtro-fechadesde" name="filtro-fechadesde" type="date" value=date.now />
-							<label class="col-form-label col-lg-3 col-sm-12">Fecha hasta</label>
-							<input class="form-control col-lg-3 col-sm-12" id="filtro-fechahasta" name="filtro-fechahasta" type="date" value="today" />
-						-->
+				<!--
+					<label class="col-form-label col-lg-3 col-sm-12">Fecha desde</label>
+					<input class="form-control col-lg-3 col-sm-12" id="filtro-fechadesde" name="filtro-fechadesde" type="date" value=date.now />
+					<label class="col-form-label col-lg-3 col-sm-12">Fecha hasta</label>
+					<input class="form-control col-lg-3 col-sm-12" id="filtro-fechahasta" name="filtro-fechahasta" type="date" value="today" />
+				-->
 			</div>
 
 		</div>
-			
+
 	</div>
 </div>
 
 
 <div class="m-portlet m-portlet--mobile">
 	<div class="m-portlet__head">
-		<div class="m-portlet__head-caption">
+		<div class="m-portlet__head-caption w-100">
 			<div class="m-portlet__head-title">
-				
+
 			</div>
-			<div class="m-portlet__head-tools">
-				<ul class="m-portlet__nav">
+			<div class="m-portlet__head-tools w-100">
+				<ul class="m-portlet__nav w-100 d-flex">
 					<li class="m-portlet--mobile">
 						<h4 class="m-portlet__head-text">
 							Listado
 						</h4>
 					</li>
-					<li class="m-portlet--head-overlay">
-						<h1 class="m-portlet__head-text" style="color:white">________________________________________________________</h1>
-					</li>
-					<li class="m-portlet__nav-item">
+					<li class="m-portlet__nav-item w-100 d-flex" style="justify-content: flex-end;">
 						<a href="/CargaMasiva/CargaMasiva" class="btn btn-success m-btn m-btn--custom m-btn--icon m-btn--air m-btn--pill">
 							<span>
 								<i class="flaticon-add"></i>
@@ -119,15 +116,14 @@
 					</li>
 				</ul>
 			</div>
-			
-		<div class="m-separator m-separator--dashed d-xl-none"></div>
-	</div>
-		-->
+
+			<div class="m-separator m-separator--dashed d-xl-none"></div>
 		</div>
 	</div>
-	<div class="m-portlet__body">
-		<!--begin: Datatable -->
-		<div class="m_datatable" id="listacargasmasivas"></div>
-		<!--end: Datatable -->
-	</div>
+</div>
+<div class="m-portlet__body">
+	<!--begin: Datatable -->
+	<div class="m_datatable" id="listacargasmasivas"></div>
+	<!--end: Datatable -->
+</div>
 </div>
