--- a/3 - Proyecto/Deploy/Views/Solicitud/Solicitud.cshtml
+++ b/3 - Proyecto/Deploy/Views/Solicitud/Solicitud.cshtml
@@ -14,15 +14,19 @@
 		ViewBag.TituloSeccion = "Solicitud " + Model.SolicitudDespachoId;
 	}
 
+	Datos.Modelo.Usuario usuario = Session["usuario"] as Datos.Modelo.Usuario;
+
 	List<Datos.Modelo.SeccionFormulario> secciones = Datos.Datos.SeccionFormulario.ObtenerSeccionesFormulario();
 }
 
 @section Less{
 	<link rel="stylesheet/less" type="text/css" href="~/Content/less/solicitud.less" />
+	<link rel="stylesheet/less" type="text/css" href="~/Content/less/existencia.less" />
 }
 
 @section Scripts{
 	<script type="text/javascript" src="~/Content/js/Solicitud.js"></script>
+	<script type="text/javascript" src="~/Content/js/Existencia.js"></script>
 }
 
 <div class="m-portlet m-portlet--full-height">
@@ -52,6 +56,7 @@
 		<div class="m-wizard m-wizard--4 m-wizard--info" id="formulario-solicitud">
 
 			<input type="hidden" id="seccionActual" value="@Model.EstadoSolicitud.SeccionFormularioId" />
+			<input type="hidden" id="perfilUsuario" value="@usuario.PerfilId" />
 
 			<!--begin: Message container -->
 			<div class="m-portlet__padding-x">
@@ -136,7 +141,7 @@
 											<a href="#" class="btn btn-primary m-btn m-btn--custom m-btn--icon" data-wizard-action="submit" id="btnGuardar">
 												<span>
 													<i class="la la-check"></i>&nbsp;&nbsp;
-													<span>@(Model.EstadoSolicitud.SeccionFormularioId == (int)Datos.Modelo.SeccionesFormulario.Solicitud ? "Solicitar" : "Guardar")</span>
+													<span>@(Model.SolicitudDespachoId == 0 ? "Solicitar" : "Guardar")</span>
 												</span>
 											</a>
 											<a href="#" class="btn btn-success m-btn m-btn--custom m-btn--icon" data-wizard-action="next" id="btnContinuar">
