--- a/3 - Proyecto/Despacho/WebApp/Content/less/existencia.less
+++ b/3 - Proyecto/Despacho/WebApp/Content/less/existencia.less
@@ -35,3 +35,139 @@ body {
 	background-color: #colores[primario] !important;
 	border-color: #colores[primario] !important;
 }
+
+#seccion-dibujo-bodega .contenedor-bodegas {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+
+#seccion-dibujo-bodega .contenedor-bodegas .bodega {
+	display: flex;
+	justify-content: end;
+	flex-direction: column;
+	width: calc(25% - 15px);
+	margin-left: 7.5px;
+	margin-right: 7.5px;
+	margin-bottom: 15px;
+	padding: 10px;
+	border-radius: 10px;
+	-webkit-box-shadow: 0px 1px 15px 1px rgba(69,65,78,0.2);
+	box-shadow: 0px 1px 15px 1px rgba(69,65,78,0.2);
+	border: solid 2px rgba(69,65,78,0.1);
+	cursor: pointer;
+	background-color: white;
+	transition: all 0.3s ease;
+}
+
+#seccion-dibujo-bodega .contenedor-bodegas .bodega:hover {
+	transform: scale(1.05);
+	z-index: 2;
+	background: #085A87;
+	color: white;
+}
+
+#seccion-dibujo-bodega .contenedor-bodegas .bodega:hover .nombre-bodega {
+	color: white;
+}
+
+#seccion-dibujo-bodega .contenedor-bodegas .bodega .nombre-bodega {
+	font-weight: bold;
+	font-size: 14pt;
+	color: #colores[primario];
+	margin-bottom: 10px;
+	height: 100%;
+}
+
+#seccion-dibujo-bodega .contenedor-bodegas .bodega .cantidad-bins {
+	margin-left: 50px;
+}
+
+#seccion-dibujo-bodega .contenedor-bodegas .bodega .cantidad-modelos {
+	margin-left: 22px;
+}
+
+#seccion-dibujo-bodega .contenedor-bodegas .bodega .cantidad-productos {
+	margin-left: 12px;
+}
+
+#seccion-dibujo-bodega .contenedor-productos.activo {
+	display: flex;
+}
+
+#seccion-dibujo-bodega .contenedor-productos {
+	width: 100%;
+	height: 440px;
+	display: none;
+	position: relative;
+	-webkit-box-shadow: 0px 1px 15px 1px rgba(69,65,78,0.2);
+	box-shadow: 0px 1px 15px 1px rgba(69,65,78,0.2);
+	border: solid 2px rgba(69, 65, 78, 0.1);
+	border-radius: 10px;
+}
+
+#seccion-dibujo-bodega .contenedor-productos .modelo-producto {
+	position: absolute;
+	left: calc(50% - 87.5px);
+	padding: 10px 20px 10px 20px;
+	background: #085a87;
+	color: white;
+	font-weight: bold;
+	top: -19.75px;
+	min-width: 175px;
+	text-align: center;
+}
+
+#seccion-dibujo-bodega .contenedor-productos .seccion-productos {
+	width: 100%;
+	margin-top: 19.75px;
+	display: flex;
+	flex-wrap: wrap;
+	padding: 15px;
+	overflow-y: auto;
+}
+
+
+#seccion-dibujo-bodega .contenedor-productos .seccion-productos .producto {
+	display: flex;
+	justify-content: end;
+	flex-direction: column;
+	width: calc(25% - 15px);
+	margin-left: 7.5px;
+	margin-right: 7.5px;
+	margin-bottom: 15px;
+	padding: 10px;
+	border-radius: 10px;
+	-webkit-box-shadow: 0px 1px 15px 1px rgba(69, 65, 78, 0.2);
+	box-shadow: 0px 1px 15px 1px rgba(69, 65, 78, 0.2);
+	border: solid 2px rgba(69, 65, 78, 0.1);
+	cursor: pointer;
+	background-color: white;
+	transition: all 0.3s ease;
+	height: max-content;
+}
+
+#seccion-dibujo-bodega .contenedor-productos .seccion-productos .producto:hover {
+	transform: scale(1.05);
+	z-index: 2;
+	background: #085A87;
+	color: white;
+}
+
+#seccion-dibujo-bodega .contenedor-productos .seccion-productos .producto .placa {
+	font-weight: bold;
+	font-size: 14pt;
+	color: #085A87;
+	margin-bottom: 10px;
+	height: 100%;
+}
+
+#seccion-dibujo-bodega .contenedor-productos .seccion-productos .producto:hover .placa {
+	color: white;
+}
+
+#seccion-dibujo-bodega .contenedor-productos .seccion-productos .producto > span > span:first-child {
+	display: inline-block;
+	width: 90px;
+	font-weight: bold;
+}
