--- a/3 - Proyecto/Despacho/WebApp/Content/less/general.less
+++ b/3 - Proyecto/Despacho/WebApp/Content/less/general.less
@@ -4,6 +4,7 @@
 	claro: #17A680;
 	blanco: #FFFFFF;
 	gris-claro: #dedede;
+	intercalado: #17A6801C;
 }
 
 body {
@@ -56,4 +57,12 @@ body {
 
 #m_aside_left .m-menu__section .m-menu__section-text {
 	color: #colores[gris-claro]!important;
+}
+
+.m_datatable .m-datatable__row.m-datatable__row--even td {
+	background-color: #colores[intercalado]!important;
+}
+
+.m_datatable .m-datatable__row:hover td {
+	background-color: #colores[gris-claro]!important;
 }
