--- a/3 - Proyecto/Despacho/WebApp/Views/CargaMasiva/CargaMasiva.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/CargaMasiva/CargaMasiva.cshtml
@@ -26,28 +26,27 @@
 		</div>
 	</div>
 	<div class="m-portlet__body">
-		<div class="col-12 col-lg-5">
-			<div class="form-group m-form__group">
-				<div class="custom-file">
-					<input type="file" class="custom-file-input" lang="es-cl" id="archivoCarga" accept=".xls,.xlsx">
-					<label class="custom-file-label" for="archivocarga">Seleccione un archivo</label>
-				</div>
+		<div class="row">
+			<div class="col-12 col-lg-5">
 				<div class="form-group m-form__group">
-					<a class="pull-right btn btn-sm btn-success col-8 col-lg-5 mb-3 mr-3" href="../Content/Archivos/Carga Masiva.xlsx" target="_blank" style="float: right;margin-top: 2.2rem;">Descargar Archivo Ejemplo</a>
+					<div class="custom-file">
+						<input type="file" class="custom-file-input" lang="es-cl" id="archivoCarga" accept=".xls,.xlsx">
+						<label class="custom-file-label" for="archivocarga">Seleccione un archivo</label>
+					</div>
+					<div class="form-group m-form__group">
+						<a class="pull-right btn btn-sm btn-success col-8 col-lg-5 mb-3 mr-3" href="../Content/Archivos/Carga Masiva.xlsx" target="_blank" style="float: right;margin-top: 2.2rem;">Descargar Archivo Ejemplo</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-5">
+				<button class="btn btn-sm btn-primary" id="btnProcesarRegistros" style="width: 100%; font-size: 1.4rem;margin-top: 2.2rem;">Procesar</button>
+			</div>
+			<div class="col-lg-7" id="alertaProcesar" style="display:none;">
+				<div class="alert alert-warning">
+					<strong>¡Importante!</strong> Presione el botón <b>Procesar</b> para guardar la información.
 				</div>
 			</div>
 		</div>
-		<div class="col-5">
-			<button class="btn btn-sm btn-primary" id="btnProcesarRegistros" style="width: 100%; font-size: 1.4rem;margin-top: 2.2rem;">Procesar</button>
-		</div>
-		<div class="col-7" id="alertaProcesar" style="display:none;">
-			<div class="alert alert-warning">
-				<strong>¡Importante!</strong> Presione el botón <b>Procesar</b> para guardar la información.
-			</div>
-		</div>
-
-
-
 	</div>
 </div>
 <h3>CargaMasiva</h3>
