--- a/3 - Proyecto/Despacho/WebApp/Views/Solicitud/Solicitud.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/Solicitud/Solicitud.cshtml
@@ -21,10 +21,12 @@
 
 @section Less{
 	<link rel="stylesheet/less" type="text/css" href="~/Content/less/solicitud.less" />
+	<link rel="stylesheet/less" type="text/css" href="~/Content/less/existencia.less" />
 }
 
 @section Scripts{
 	<script type="text/javascript" src="~/Content/js/Solicitud.js"></script>
+	<script type="text/javascript" src="~/Content/js/Existencia.js"></script>
 }
 
 <div class="m-portlet m-portlet--full-height">
