--- a/3 - Proyecto/Despacho/WebApp/Views/CargaMasiva/CargaMasiva.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/CargaMasiva/CargaMasiva.cshtml
@@ -56,6 +56,15 @@
 				<h3>Resultado</h3>
 			</div>
 		</div>
+		<div class="m-portlet__head-tools">
+			<ul class="m-portlet__nav">
+				<li class="m-portlet__nav-item">
+					<a href="#" id="guardar-registros" class="m-portlet__nav-link btn btn-success m-btn m-btn--pill m-btn--air">
+						Guardar
+					</a>
+				</li>
+			</ul>
+		</div>
 	</div>
 	<div class="m-portlet__body">
 		<div class="col-12">
