--- a/3 - Proyecto/Deploy/Content/less/cargaMasiva.less
+++ b/3 - Proyecto/Deploy/Content/less/cargaMasiva.less
@@ -2,6 +2,33 @@
 
 body {
 }
+
 .custom-file-label::after {
-	content:"Explorar"
+	content: "Explorar"
+}
+
+#btnProcesarRegistros {
+	background-color: rgba(8, 90, 135, 1);
+}
+
+#btnProcesarRegistros.pulso-guardar {
+	box-shadow: 0 0 0 0 rgba(8, 90, 135, 1) !important;
+	animation: pulse 2s infinite;
+}
+
+@keyframes pulse {
+	0% {
+		transform: scale(0.95);
+		box-shadow: 0 0 0 0 rgba(8, 90, 135, 0.7) !important;
+	}
+
+	70% {
+		transform: scale(1);
+		box-shadow: 0 0 0 30px rgba(8, 90, 135, 0) !important;
+	}
+
+	100% {
+		transform: scale(0.95);
+		box-shadow: 0 0 0 0 rgba(8, 90, 135, 0) !important;
+	}
 }
